<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pringstudio.cobamvp.view.LoginActivity">

    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/login_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="144dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:hint="Username" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/login_password"
        app:layout_constraintLeft_toLeftOf="@+id/login_user"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_user"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintRight_toRightOf="@+id/login_user"
        android:hint="Password"
        android:inputType="textPassword" />

    <Button
        android:text="Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="@+id/login_user"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintRight_toRightOf="@+id/login_password" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

    <TextView
        android:text="To Login use : user, password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/login_password"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
</android.support.constraint.ConstraintLayout>
